# sentry

./: .gitattributes  .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_BACKLOG.md  KNOWN_LIMITATIONS.md  PROJECT_PLAN.md
docs/perf/: watcher-benchmark-summary.md  watcher-soak-latest-summary.md
scripts/: benchmark-watcher.ps1  build-watcher.ps1  check-soak.ps1  run-checks.ps1  soak-watcher.ps1  start-soak.ps1  stop-soak.ps1
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: db.rs  main.rs  models.rs
ui/src/lib/: models.ts
watcher-zig/: build.zig  build.zig.zon
watcher-zig/src/: main.zig
