[package]
name = "sentry-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Sentry desktop host and data pipeline"

[build-dependencies]
# Build script compiles `src/models.rs` to generate TypeScript bindings.
# Keep serde + ts-rs here (separate from normal crate dependencies).
tauri-build = { version = "2.5.6", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
ts-rs = "11.1.0"

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["macros", "sync", "time"] }
ts-rs = "11.1.0"

[dev-dependencies]
tempfile = "3.23.0"
